feat: Implement download vCard functionality

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -64,6 +64,7 @@
         Edit
       }
     </button>
+    <button (click)="downloadVCARD()">Download</button>
     <button (click)="copyUrl()">Copy URL</button>
   </div>
 </div>
